[package]
name = "lickety"
version = "0.1.0"
authors = ["Michael Rawson <michael@rawsons.uk>"]
edition = "2021"
description = "linear resolution with splitting"
license = "MIT"

[dependencies]
anyhow = "1"
blake3 = "1"
discrimination-tree = "0.3"
fnv = "1"
tptp = "0.31"

[dependencies.clap]
version = "3"
features = ["derive"]